@@ -228,7 +228,6 @@ classdef Cal < handle
 
 
 
-
   properties(Access=private, Constant)
 
     % Local TF constant for convenience.
@@ -322,10 +321,10 @@ classdef Cal < handle
     % =======================
     % The nominal use is that the caller first initializes (argument)
     % RctdCaMap
-    % (1) by loading all RCTs using
-    %     bicas.proc.L1L2.cal.rct.findread.find_read_RCTs_by_regexp(),
-    % (2) by loading relevant RCT(s) using
-    %     bicas.proc.L1L2.cal.rct.findread.find_read_RCTs_by_regexp_and_ZVCTI_GACT()
+    % (1) by loading RCTs using
+    %     bicas.proc.L1L2.cal.rct.findread.find_read_RCTs_by_RCT_JSON_and_regexp(),
+    % (2) by loading RCT(s) using
+    %     bicas.proc.L1L2.cal.rct.findread.find_read_RCTs_by_RCT_JSON_and_ZVCTI_GACT()
     % or
     % (3) manually (for manual debugging/analysis/testing).
     %
