@@ -70,10 +70,6 @@
 % First created 2020-06-24.
 %
 function rctJsonPath = create_RCT_JSON(destDir, biasRctFilename, DtBegin, DtEnd)
-% PROPOSAL: Do not use bicas.utils.JSON_object_str(). Use MATLAB's own support
-%           for JSON files: jsonencode().
-
-RCT_JSON_FILENAME = 'bias_rct_validity.json';
 
 beginStr = DT_to_str(DtBegin);
 endStr   = DT_to_str(DtEnd);
@@ -89,7 +85,7 @@ JsonObj(biasRctFilename) = { ...
 
 str = bicas.utils.JSON_object_str(JsonObj);
 
-rctJsonPath = fullfile(destDir, RCT_JSON_FILENAME);
+rctJsonPath = fullfile(destDir, bicas.const.RCT_JSON_FILENAME);
 irf.fs.write_file(rctJsonPath, uint8(str(:)));
 
 end
