@@ -1,6 +1,9 @@
 %
 % matlab.unittest automatic test code for bicas.tools.rct.create_RCT_JSON().
 %
+% NOTE: bicas.proc.L1L2.cal.rct.findread___UTEST also indirectly tests
+% bicas.tools.rct.create_RCT_JSON()
+%
 %
 % Author: Erik P G Johansson, IRF, Uppsala, Sweden
 %
@@ -52,10 +55,11 @@ classdef create_RCT_JSON___UTEST < matlab.unittest.TestCase
 
 
     function test(testCase)
-      beginDt = datetime('2020-01-02T03:04:05');
-      endDt   = datetime('2099-12-31T23:59:59');
+      BEGIN_DT = datetime('2020-01-02T03:04:05Z', 'TimeZone', 'UTCLeapSeconds');
+      END_DT   = datetime('2099-12-31T23:59:59Z', 'TimeZone', 'UTCLeapSeconds');
 
-      actRctJsonPath = bicas.tools.rct.create_RCT_JSON(testCase.testDir, 'biasRctFilename.cdf', beginDt, endDt);
+      actRctJsonPath = bicas.tools.rct.create_RCT_JSON(testCase.testDir, 'biasRctFilename.cdf', BEGIN_DT, END_DT);
+
       irf.assert.file_exists(actRctJsonPath)
     end
 
